add markup and styles for moblile view

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -35,3 +35,18 @@
   border: none;
   background-color: transparent;
 }
+
+@media screen and (max-width: 627px) {
+  .card__title {
+    font-size: 16px;
+    line-height: 1;
+  }
+
+  .card__image {
+    width: 288px;
+    height: 288px;
+  }
+
+  .card__like-btn {
+  }
+}
