make required changes to turn in prodject

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -4,11 +4,22 @@
   border-bottom: 1px rgba(21, 21, 21, 0.4) solid;
 }
 
+.profile__add-btn::before {
+  content: "";
+  width: 12px;
+  height: 12px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/plus.svg);
+}
+
 .profile__add-btn {
-  margin: 138px 0 0 auto;
+  margin: auto 0 0 auto;
   color: #fcf5e5;
   background-color: #212121;
   height: 52px;
+  border: 0;
   border-radius: 8px;
   padding: 18px 32px;
   display: flex;
@@ -19,16 +30,24 @@
   line-height: 1;
 }
 
-.profile__plus-image {
-  width: 12px;
-  height: 12px;
+.profile__add-btn:hover {
+  opacity: 80%;
+  cursor: pointer;
+}
+
+.profile__edit-btn::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  background-image: url(../images/pencil.svg);
 }
 
 .profile__edit-btn {
   margin-top: auto;
   padding: 0;
   gap: 8px;
-  opacity: 0.7;
+  color: #212121;
+  opacity: 70%;
   display: flex;
   align-items: center;
   border: none;
@@ -38,11 +57,17 @@
   line-height: 1;
 }
 
+.profile__edit-btn:hover {
+  color: #212121;
+  opacity: 100%;
+  cursor: pointer;
+}
+
 .profile__avatar {
   margin-right: 20px;
   width: 190px;
   height: 190px;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .profile__column {
@@ -52,8 +77,7 @@
 
 .profile__name {
   margin: 0;
-  width: 420px;
-  height: 32px;
+  max-width: 420px;
   font-weight: 500;
   font-size: 32px;
   line-height: 1;
@@ -67,8 +91,7 @@
 
 .profile__description {
   margin: 12px 0 0;
-  width: 97px;
-  height: 16px;
+  max-width: 420px;
   font-size: 16px;
   font-weight: 500;
   line-height: 1;
@@ -80,7 +103,7 @@
   -webkit-box-orient: vertical;
 }
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 320px) {
   .profile {
     flex-direction: column;
     max-width: 288px;
