--- a/blocks/card.css
+++ b/blocks/card.css
@@ -6,11 +6,12 @@
   width: 413px;
   height: 413px;
   display: block;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .card__title {
   max-width: 353px;
+  color: #212121;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -30,14 +31,21 @@
 
 .card__like-btn {
   background-image: url(../images/heart.svg);
+  opacity: 40%;
   width: 23px;
   height: 20px;
   border: none;
   background-color: transparent;
 }
 
-@media screen and (max-width: 627px) {
+.card__like-btn:hover {
+  cursor: pointer;
+  opacity: 100%;
+}
+
+@media screen and (max-width: 320px) {
   .card__title {
+    max-width: 288px;
     font-size: 16px;
     line-height: 1;
   }
@@ -48,5 +56,6 @@
   }
 
   .card__like-btn {
+    background-size: contain;
   }
 }
