--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,4 +1,5 @@
 .cards {
+  max-width: 1280px;
   padding: 20px 0 40px;
   border-bottom: 1px rgba(21, 21, 21, 0.4) solid;
 }
@@ -13,7 +14,7 @@
   gap: 40px 20px;
 }
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 320px) {
   .cards__list {
     grid-template-columns: repeat(auto-fill, 288px);
     gap: 20px;
