--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -125,18 +125,19 @@
   .profile__avatar {
     width: 80px;
     height: 80px;
-    margin: 0;
+    margin: 0 0 12px 0;
   }
 
   .profile__name {
     width: auto;
     text-align: center;
     font-size: 20px;
+    margin: 0 0 6px;
   }
 
   .profile__description {
     width: auto;
     text-align: center;
-    margin: 0;
+    margin: 0 0 32px;
   }
 }
