--- a/blocks/card.css
+++ b/blocks/card.css
@@ -30,7 +30,7 @@
 }
 
 .card__like-btn {
-  background-image: url(../images/heart.svg);
+  background-image: url(../images/heart-dark.svg);
   opacity: 40%;
   width: 23px;
   height: 20px;
